--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yash Doke</title>
+    <title >Yash Doke | Portfolio </title>
+    <link rel="shortcut icon" href="./src/assets/android-chrome-512x512.png" type="image/x-icon">
   </head>
   <body >
     <div id="root"></div>
